--- a/app/src/main/res/layout/activity_pet_health.xml
+++ b/app/src/main/res/layout/activity_pet_health.xml
@@ -101,7 +101,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
-                                    android:text="Ważenie + wskaźnik zdrowia"
+                                    android:text="Ważenie"
                                     android:textColor="#014D70" />
 
                             </LinearLayout>
