--- a/app/src/main/res/layout/general_with_photo.xml
+++ b/app/src/main/res/layout/general_with_photo.xml
@@ -57,7 +57,7 @@
                             app:cardElevation="5dp">
 
                             <ImageView
-                                android:id="@+id/imageView_treats"
+                                android:id="@+id/imageView_general"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
 
@@ -81,23 +81,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="fill_parent"
                                 android:layout_marginLeft="30dp"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:id="@+id/textViewDeleteImage_rodent"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginLeft="20dp"
-                                    android:layout_marginTop="10dp"
-                                    android:layout_weight="1"
-                                    android:text="Wyczyść zdjęcie..."
-                                    android:textAlignment="center"
-                                    android:textAllCaps="true"
-                                    android:textColor="#014D70"
-                                    android:textColorHint="#77147A"
-                                    android:textSize="16sp"
-                                    android:visibility="gone" />
-                            </LinearLayout>
+                                android:orientation="horizontal"/>
 
                             <LinearLayout
                                 android:layout_width="0dp"
@@ -108,23 +92,24 @@
                                 android:orientation="vertical">
 
                                 <TextView
-                                    android:id="@+id/textViewName_treats"
+                                    android:id="@+id/textViewName_general"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="10dp"
-                                    android:layout_marginTop="5dp"
+                                    android:layout_marginLeft="5dp"
+                                    android:layout_marginTop="10dp"
                                     android:gravity="left"
                                     android:text="Nazwa"
                                     android:textColor="#014D70"
-                                    android:textSize="20sp" />
+                                    android:textSize="28sp" />
 
                                 <TextView
-                                    android:id="@+id/textViewDesc_treats"
+                                    android:id="@+id/textViewDesc_general"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="10dp"
+                                    android:layout_marginLeft="5dp"
                                     android:text="Opis"
-                                    android:textColor="#5C5C5C" />
+                                    android:textColor="#5C5C5C"
+                                    android:textSize="16sp" />
 
                             </LinearLayout>
 
@@ -134,12 +119,24 @@
                         <View
                             android:id="@+id/view_treats"
                             android:layout_width="match_parent"
-                            android:layout_height="5dp"
+                            android:layout_height="10dp"
                             android:layout_marginLeft="30dp"
                             android:layout_marginTop="8dp"
                             android:layout_marginRight="30dp"
-                            android:layout_marginBottom="20dp"
-                            android:background="#048FCD" />
+                            android:layout_marginBottom="5dp"
+                            android:background="#FFFFFF" />
+
+                        <LinearLayout
+                            android:id="@+id/ll"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/recyclerView_general"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent" />
+                        </LinearLayout>
 
                     </LinearLayout>
 
