--- a/app/src/main/res/layout/general_list.xml
+++ b/app/src/main/res/layout/general_list.xml
@@ -36,7 +36,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="1dp"
                     android:gravity="left"
                     android:text="Nazwa"
                     android:textColor="#014D70"
@@ -63,8 +63,8 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="30dp"
-            android:layout_marginBottom="20dp"
-            android:background="#048FCD" />
+            android:layout_marginBottom="10dp"
+            android:background="#5397DF" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
