--- a/app/src/main/res/layout/treats_cagesupply.xml
+++ b/app/src/main/res/layout/treats_cagesupply.xml
@@ -69,17 +69,16 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
                         android:gravity="center"
                         android:orientation="horizontal">
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="10dp"
                             android:layout_weight="1"
-                            android:orientation="horizontal">
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -89,17 +88,25 @@
                                 android:tint="#0375a8"
                                 app:srcCompat="@drawable/ic_info" />
 
-                            <TextView
-                                android:id="@+id/textViewInfo_encyclopedia"
+                            <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginRight="20dp"
                                 android:layout_marginBottom="10dp"
-                                android:text="Info"
-                                android:textColor="#014D70"
-                                android:textSize="16sp" />
+                                android:layout_weight="1"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:id="@+id/textViewInfo_encyclopedia"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="12dp"
+                                    android:layout_marginTop="2dp"
+                                    android:layout_marginRight="20dp"
+                                    android:layout_marginBottom="10dp"
+                                    android:text="Info"
+                                    android:textColor="#014D70"
+                                    android:textSize="16sp" />
+                            </LinearLayout>
                         </LinearLayout>
 
                         <LinearLayout
@@ -119,7 +126,7 @@
                                 android:elevation="32dp"
 
                                 android:gravity="center"
-                                app:cardBackgroundColor="#A31A1A"
+                                app:cardBackgroundColor="#FFFFFF"
                                 app:cardCornerRadius="20dp"
                                 app:cardElevation="5dp">
 
