Small bugfixes for Weight activity

--- a/app/src/main/res/layout/vet_map.xml
+++ b/app/src/main/res/layout/vet_map.xml
@@ -64,7 +64,7 @@
         <LinearLayout
             android:id="@+id/linearLayoutMap_map"
             android:layout_width="match_parent"
-            android:layout_height="360dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -72,7 +72,7 @@
                 android:id="@+id/vetMap"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 app:cameraTilt="30"
@@ -91,7 +91,6 @@
             android:id="@+id/linearLayoutData_map"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
@@ -184,6 +183,7 @@
                     android:id="@+id/buttonAddVet_map"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
                     android:text="Dodaj do listy weterynarzy"
                     android:visibility="visible"
                     app:backgroundTint="#5397DF"
