--- a/app/src/main/res/layout/weight.xml
+++ b/app/src/main/res/layout/weight.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical">
 
         <ScrollView
+            android:id="@+id/scrollView_weight"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -36,34 +37,68 @@
 
 
                     <LinearLayout
+                        android:id="@+id/linearLayoutChartInfo_weight"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:visibility="gone">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="5dp"
+                            android:layout_marginStart="6dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="6dp"
+                            android:layout_marginBottom="5dp"
+                            android:background="#5397DF" />
+
+                        <TextView
+                            android:id="@+id/textViewChart_weight"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:gravity="center"
+                            android:maxLines="6"
+                            android:text="&lt; potrzeba minimum dwóch pomiarów wagi, wpisanych do aplikacji, żeby wyświetlić graficzny wykres &gt;"
+                            android:textColor="#014D70"
+                            android:textColorHint="#77147A"
+                            android:textSize="20sp"
+                            android:visibility="visible" />
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="5dp"
+                            android:layout_marginStart="6dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginEnd="6dp"
+                            android:layout_marginBottom="15dp"
+                            android:background="#5397DF" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/linearLayoutChart_weight"
                         android:layout_width="match_parent"
                         android:layout_height="220dp"
                         android:layout_marginTop="15dp"
                         android:gravity="center_horizontal"
-                        android:orientation="horizontal">
+                        android:orientation="vertical">
 
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="right"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/textViewDateWeight_hidden"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:visibility="gone"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
-                        </LinearLayout>
+                        <TextView
+                            android:id="@+id/textViewDateWeight_hidden"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <com.github.mikephil.charting.charts.LineChart
                             android:id="@+id/lineChart_weight"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginRight="5dp">
+                            android:layout_marginStart="5dp"
+                            android:layout_marginEnd="5dp">
 
                         </com.github.mikephil.charting.charts.LineChart>
 
@@ -94,7 +129,7 @@
                             android:layout_marginLeft="20dp"
                             android:layout_marginRight="20dp"
                             android:maxLines="6"
-                            android:text="Info"
+                            android:text="&lt; Informacje o prawidłowej wadze wyświetlą się w momencie dodania pierwszego pomiaru &gt;"
                             android:textColor="#014D70"
                             android:textColorHint="#77147A"
                             android:textSize="16sp" />
@@ -223,7 +258,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="5dp"
                         android:layout_margin="6dp"
-                        android:background="#048FCD" />
+                        android:background="#5397DF" />
 
                     <TextView
                         android:id="@+id/textViewDate_hidden"
@@ -246,7 +281,7 @@
             android:layout_height="wrap_content"
             android:gravity="bottom"
             android:orientation="vertical"
-            android:visibility="gone"
+            android:visibility="visible"
             tools:layout_editor_absoluteY="558dp">
 
             <include
