--- a/app/src/main/res/layout/weight_list.xml
+++ b/app/src/main/res/layout/weight_list.xml
@@ -146,7 +146,7 @@
             android:layout_width="match_parent"
             android:layout_height="5dp"
             android:layout_margin="6dp"
-            android:background="#048FCD" />
+            android:background="#5397DF" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
