--- a/app/src/main/res/layout/notes_item_list.xml
+++ b/app/src/main/res/layout/notes_item_list.xml
@@ -16,6 +16,19 @@
         android:orientation="vertical"
         tools:context=".ROOM.Notes.ViewNotes">
 
+        <LinearLayout
+            android:id="@+id/linearLayoutToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <include
+                android:id="@+id/app_bar"
+                layout="@layout/app_bar_global" />
+
+        </LinearLayout>
+
 
         <TextView
             android:layout_width="match_parent"
@@ -66,7 +79,7 @@
         <EditText
             android:id="@+id/editTextContent_notes"
             android:layout_width="match_parent"
-            android:layout_height="171dp"
+            android:layout_height="100dp"
             android:layout_marginLeft="20dp"
             android:hint="Treść notatki"
             android:maxLines="15"
