--- a/app/src/main/res/layout/activity_view_recycler.xml
+++ b/app/src/main/res/layout/activity_view_recycler.xml
@@ -17,8 +17,8 @@
 
         <include
             android:id="@+id/app_bar"
-            layout="@layout/app_bar"
-            android:layout_height="match_parent">
+            layout="@layout/app_bar_global"
+            >
 
         </include>
 
