--- a/app/src/main/res/layout/activity_weight.xml
+++ b/app/src/main/res/layout/activity_weight.xml
@@ -26,6 +26,11 @@
                 android:gravity="bottom"
                 android:orientation="vertical">
 
+                <include
+                    android:id="@+id/app_bar"
+                    layout="@layout/app_bar_global">
+                </include>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -40,6 +45,7 @@
                         android:id="@+id/linearLayoutChartInfo_weight"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
                         android:orientation="vertical"
                         android:visibility="gone">
 
