--- a/app/src/main/res/layout/general_with_photo.xml
+++ b/app/src/main/res/layout/general_with_photo.xml
@@ -15,6 +15,11 @@
         android:gravity="bottom"
         android:orientation="vertical">
 
+        <include
+            android:id="@+id/app_bar"
+            layout="@layout/app_bar_global">
+        </include>
+
 
         <LinearLayout
             android:layout_width="match_parent"
